# rotary-lights-website

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.local.yml  docker-compose.production.yml  docs.yml  gulpfile.js  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile  entrypoint  start
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/django/celery/beat/: start
compose/production/django/celery/flower/: start
compose/production/django/celery/worker/: start
compose/production/nginx/vhost.d/: ec2-18-222-200-34.us-east-2.compute.amazonaws.com_location
compose/production/traefik/: traefik.yml
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt
rotary_lights_website/: conftest.py  utils.py
rotary_lights_website/contact/: apps.py
rotary_lights_website/content/: apps.py  models.py
rotary_lights_website/content/migrations/: 0001_initial.py  0002_rotaryformpage_rotaryformconfirmemail.py
rotary_lights_website/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
rotary_lights_website/core/: apps.py
rotary_lights_website/shop/: apps.py
rotary_lights_website/static/css/: project.css
rotary_lights_website/static/js/: disable_is_quarantined.js  hide_owners.js
rotary_lights_website/templates/: base.html
rotary_lights_website/templates/account/: base_manage_password.html
rotary_lights_website/templates/allauth/elements/: alert.html  badge.html  fields.html  panel.html  table.html
rotary_lights_website/templates/allauth/layouts/: entrance.html  manage.html
rotary_lights_website/templates/mail/: volunteering_campaign.html
rotary_lights_website/templates/rotary_lights/pages/: article_page.html  event_page.html  form_page_landing.html  stream_form_page.html  web_page_notitle.html
rotary_lights_website/templates/users/: user_detail.html  user_form.html
rotary_lights_website/users/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  views.py
rotary_lights_website/users/migrations/: 0001_initial.py
rotary_lights_website/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
rotary_lights_website/volunteering/: apps.py  forms.py  models.py  wagtail_hooks.py
rotary_lights_website/volunteering/migrations/: 0001_initial.py  0002_alter_organization_primary_contact_phone_number_and_more.py  0002_shift.py  0003_alter_shift_name_activity.py  0003_volunteeringcampaign.py  0004_alter_volunteer_address.py  0004_remove_activity_shifts_shift_activity.py  0005_organization_first_activity_and_more.py  0006_rename_secondary_activity_organization_second_activity.py  0007_shift_name_alter_shift_end_date_and_more.py  0008_alter_organization_first_activity_and_more.py  0009_alter_volunteer_primary_phone_number_and_more.py
rotary_lights_website/volunteering/models/: activities.py  emails.py  events.py  organizations.py  shifts.py  volunteers.py
rotary_lights_website/volunteering/views/: reports.py
rotary_lights_website/volunteering/views/snippets/: activities.py  events.py  groups.py  members.py  organizations.py  owners.py  shifts.py  volunteers.py
