# Build System
# ----------------------------------------------------------------------

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


# Poetry Dynamic Versioning
# ----------------------------------------------------------------------

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"


# pytest
# ----------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --strict-markers -s"
python_files = ["tests.py", "test_*.py"]
norecursedirs = [
    "__pycache__",
    ".envs",
    "*.egg",
    ".eggs",
    ".github",
    ".tox",
    ".vscode",
    "assets",
    "bin",
    "build",
    "dist",
    "docs/conf.py",
    "locale",
    "requirements",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:twisted.*",
    "ignore::DeprecationWarning:l18n.translation.*",
    "ignore::django.utils.deprecation.RemovedInDjango60Warning:django.db.models.fields.*",
    "ignore::django.utils.deprecation.RemovedInDjango60Warning:wagtail.admin.forms.choosers.*",
]


# coverage
# ----------------------------------------------------------------------

[tool.coverage.run]
source = ["rotary_lights_website"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "*/.tox/*",
    "*/__main__.py",
    "*/settings/*",
    "*/templates/*",
]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Don't complain about explicitly skipped lines
    "pragma: no cover",
]


# mypy
# ----------------------------------------------------------------------

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
mypy_path = "rotary_lights_website"

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true


# django-stubs
# ----------------------------------------------------------------------

[tool.django-stubs]
django_settings_module = "config.settings.local"


# Poetry & Project
# ----------------------------------------------------------------------

[tool.poetry]
name = "rotary_lights_website"
version = "0.0.0" # Placeholder; configured by poetry-dynamic-versioning
description = "The source code powering the website for the Rotary Lights Club of La Crosse, WI."
authors = ["Rotary Lights of La Crosse <rotarylights@gmail.com>"]
maintainers = ["Dakota Horstman <dakota.horstman2001@gmail.com>"]
readme = "README.md"
homepage = "https://rotarylights.org/"
repository = "https://github.com/Rotary-Lights/rotary-lights-website"
documentation = "https://github.com/Rotary-Lights/rotary-lights-website"
keywords = ["rotary", "lights", "website", "la crosse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail :: 6",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Typing :: Typed",
]
exclude = [
    "__pycache__",
    ".envs",
    "*.egg",
    ".eggs",
    ".github",
    ".tox",
    ".vscode",
    "assets",
    "bin",
    "build",
    "dist",
    "docs/conf.py",
    "locale",
    "requirements",
    "tests",
]
dependencies.python = ">=3.12,<3.13"
dependencies.django-address = "^0.2.8"
dependencies.django-phonenumber-field = { extras = [
    "phonenumbers",
], version = "^7.3.0" }
dependencies.atpublic = "^4.1.0"
dependencies.django-organizations = "^2.4.1"
dependencies.celery = { extras = ["redis"], version = "^5.4.0" }
dependencies.psycopg = { extras = ["binary", "pool"], version = "^3.1.18" }
dependencies.django-polymorphic = "^3.1.0"
dependencies.coderedcms = { git = "https://github.com/dakotahorstman/coderedcms" }
dependencies.django-sass = "^1.1.0"
dependencies.django-cors-headers = "^4.3.1"
dependencies.wagtail = "^6.0.1"
dependencies.django-model-utils = "^4.4.0"
dependencies.django-allauth = { extras = ["mfa"], version = "^0.61.1" }
dependencies.django-crispy-forms = "^2.1"
dependencies.crispy-bootstrap5 = "^2024.2"
dependencies.django-compressor = "^4.4"
dependencies.python-slugify = "^8.0.4"
dependencies.rcssmin = "1.1.1"
dependencies.argon2-cffi = "^23.1.0"
dependencies.hiredis = "^2.3.2"
dependencies.uvicorn = { extras = ["standard"], version = "^0.27.1" }
dependencies.channels = "^4.0.0"
dependencies.channels-redis = "^4.2.0"
dependencies.redis = "^5.0.2"
dependencies.django-redis = "^5.4.0"
dependencies.loguru = "^0.7.2"
dependencies.whitenoise = "^6.6.0"
dependencies.django = "^5.0.2"
dependencies.django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
detect-secrets = "^1.4.0"
ipython = "^8.22.1"
pytest = "^8.0.2"
coverage = "^7.4.3"
django-coverage-plugin = "^3.1.0"
pytest-django = "^4.8.0"
django-debug-toolbar = "^4.3.0"
django-extensions = "^3.2.3"
daphne = "^4.1.0"
werkzeug = { extras = ["watchdog"], version = "^3.0.1" }
ipdb = "^0.13.13"
psycopg = { extras = ["binary", "pool"], version = "^3.1.18" }
watchfiles = "^0.21.0"
sphinx = "^7.2.6"
furo = "^2024.1.29"
factory-boy = "^3.3.0"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }
